Fixed minor issues on the filtering section

--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@ footer {
 }
 
 .ingredient-container p{
-    font-size: 12px;
+    font-size: 15px;
     margin: 0;
 }
 #reset-filters-btn{
@@ -781,3 +781,62 @@ main p {
     border: solid 3px var(--accent);
     cursor: pointer;
 }
+
+.current-image-name{
+    letter-spacing: 3px;
+}
+
+/* SCROLLBAR INGREDIENTS */
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px var(--accent); 
+    border-radius: 8px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--accent);
+    border-radius: 10px;
+  }
+
+.selection-container::-webkit-scrollbar {
+    width: 15px;
+    height: 10%;
+  }
+
+/* MAX INGREDIENTS SLIDER */
+
+#slider-input input{
+    width: 100%;
+    height: 4px;
+    border-radius: 8px;
+    cursor: pointer;
+    background-color: var(--accent);
+    appearance: none;
+}
+
+
+#slider-input input[type=range]::-webkit-slider-thumb {
+    --c: var(--accent); /* active color */
+    --g: 10px; /* the gap */
+    --l: 2px; /* line thickness*/
+    --s: 10px; /* thumb size*/
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: #222831;
+    box-shadow: 0 0 0 var(--l) inset var(--c);
+    appearance: none;
+  }
+
+  #complexity-message{
+    text-align: center;
+}
+
+#alcoholic-choises{
+    line-height: 45px;
+    font-size: 20px;
+    text-align: center;
+}
+
